Updated colors and changed some txt

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,9 +25,10 @@ const socialCount = SOCIALS.filter(social => social.active).length;
     <section id="hero">
       <h1>Chibai 🤝</h1>
       <p>
-        My name is Soi and I am currently a Student studying BCA at Symbiosis International University. You can find my thoughts and follow my journey here.
+        My name is Soi and I am currently a Student studying BCA at Symbiosis International University. 
+        You can find my thoughts and follow my journey here.
       </p>
-      <p>My interests are gaming, coding and running!</p>
+      <p>I have a passion to turn thoughts and ideas into tangible products that benefit you and me. My interests include coding, gaming and running!</p>
 
       <!-- Commented out because of the nice classname <p>
         Read the blog posts or check
