--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html {
+    font-family: "Figtree", "Helvetica", sans-serif;
+  }
+}
 
 @layer base {
   :root,
@@ -13,12 +21,12 @@
     --color-border: 236, 233, 233;
   }
   html[data-theme="dark"] {
-    --color-fill: 33, 39, 55;
-    --color-text-base: 234, 237, 243;
-    --color-accent: 255, 107, 1;
+    --color-fill: 8, 51, 70;
+    --color-text-base: 255, 255, 255;
+    --color-accent: 254, 234, 165;
     --color-card: 52, 63, 96;
     --color-card-muted: 138, 51, 2;
-    --color-border: 171, 75, 8;
+    --color-border: 254, 234, 165;
   }
   #sun-svg,
   html[data-theme="dark"] #moon-svg {
@@ -29,7 +37,7 @@
     display: block;
   }
   body {
-    @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base selection:bg-skin-accent/70 selection:text-skin-inverted;
+    @apply flex min-h-[100svh] flex-col bg-skin-fill  text-skin-base selection:bg-skin-accent/70 selection:text-skin-inverted;
   }
   section,
   footer {
