--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -181,7 +181,8 @@ const { activeNav } = Astro.props;
     @apply w-full px-4 py-3 text-center font-medium hover:text-skin-accent sm:my-0 sm:px-2 sm:py-1;
   }
 
-  nav ul li:last-child a {
+  nav ul li:last-child a,
+  nav ul li:nth-last-child(2) a {
     @apply items-center place-content-center;
   }
 
