Made comment section light/dark theme responsive

--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -8,6 +8,7 @@ import type { CollectionEntry } from "astro:content";
 import { slugifyStr } from "@utils/slugify";
 import ShareLinks from "@components/ShareLinks.astro";
 import { SITE } from "@config";
+import Comments from "@components/Comments";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -111,6 +112,25 @@ const nextPost =
 
       <ShareLinks />
     </div>
+    
+  <Comments client:only="react" />
+<!--
+    <script src="https://giscus.app/client.js"
+        data-repo="soithangsing/blog"
+        data-repo-id="R_kgDONDTWFQ"
+        data-category="General"
+        data-category-id="DIC_kwDONDTWFc4Cjj5v"
+        data-mapping="pathname"
+        data-strict="0"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="preferred_color_scheme"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+    </script>
+    -->
 
     <hr class="my-6 border-dashed" />
 
